fix: add adapter support * reduce npm package size * improve testing * remove uri setting (they never worked properly due to async nature) doc: improve README.md to reflect new usage

--- a/.npmignore
+++ b/.npmignore
@@ -4,3 +4,12 @@ node_modules/
 coverage/
 example/npm-debug.log
 .DS_Store
+.nyc_output/
+.github/
+example/
+tests/
+.gitignore
+.travis.yml
+commitlint.config.js
+prettier.config.js
+mongo
